# dive-default-mcp

./: Cargo.toml
src/: main.rs
src/service/: fs.rs  mod.rs
